--- a/meetings.yml
+++ b/meetings.yml
@@ -16,4 +16,4 @@
   speakers:
     - name: Matthew Boston
       link: www.matthewboston.com
-      talk: Logic Programming with core.logico
+      talk: Logic Programming with core.logic
