fix issues with meetings.yml

--- a/meetings.yml
+++ b/meetings.yml
@@ -51,7 +51,7 @@ TBD:
       talk: Building a Scrabble Solver
 
     - name: John Andrews
-      link: link: https://twitter.com/xandrews
+      link: https://twitter.com/xandrews
       talk: Dieter
 
     - name: John Andrews
@@ -64,4 +64,4 @@ TBD:
 
     - name: Matthew Boson
       link: http://www.matthewboston.com
-      talk: Workshop: Building a Noir web app
+      talk: 'Workshop: Building a Noir web app'
