fix misspelling in meetings

--- a/meetings.yml
+++ b/meetings.yml
@@ -63,7 +63,7 @@ TBD:
       link: https://twitter.com/xandrews
       talk: Accessing Static Assets in Uberjar
 
-      # has Wednesday nigth class this quarter
+      # has Wednesday night class this quarter
     - name: Joshua Eckroth
       link: http://www.cse.ohio-state.edu/~eckroth/
       talk: Loom
