--- a/meetings.yml
+++ b/meetings.yml
@@ -41,6 +41,11 @@
     - name: Matthew Boston
       link: http://www.matthewboston.com
       talk: interleave
+
+06/06/12:
+  speakers:
+  fotm:
+
 TBD:
   speakers:
     - name: John Andrews
