--- a/meetings.yml
+++ b/meetings.yml
@@ -48,6 +48,11 @@
       link: https://twitter.com/xandrews
       talk: Macros
 
+  fotm:
+    - name: Matthew Boston
+      link: http://www.matthewboston.com
+      talk: juxt
+
 TBD:
   speakers:
     - name: Bill Robertson
