add empty July speakers

--- a/meetings.yml
+++ b/meetings.yml
@@ -53,6 +53,9 @@
       link: http://www.matthewboston.com
       talk: juxt
 
+07/04/12:
+  speakers:
+
 TBD:
   speakers:
     - name: Bill Robertson
