added John as speaker for 7/11

--- a/meetings.yml
+++ b/meetings.yml
@@ -55,6 +55,9 @@
 
 07/11/12:
   speakers:
+    - name: John Andrews
+      link: https://twitter.com/xandrews
+      talk: Swarm Coding
 
 TBD:
   speakers:
