added Matthew for July FOTM

--- a/meetings.yml
+++ b/meetings.yml
@@ -59,6 +59,11 @@
       link: https://twitter.com/xandrews
       talk: Swarm Coding
 
+  fotm:
+    - name: Matthew Boston
+      link: http://www.matthewboston.com
+      talk: update-in & get-in
+
 TBD:
   speakers:
     - name: Bill Robertson
