add august date to meetings

--- a/meetings.yml
+++ b/meetings.yml
@@ -64,6 +64,9 @@
       link: http://www.matthewboston.com
       talk: update-in & get-in
 
+08/01/12:
+  speakers:
+
 TBD:
   speakers:
     - name: Bill Robertson
