added speakers for August

--- a/meetings.yml
+++ b/meetings.yml
@@ -66,6 +66,14 @@
 
 08/01/12:
   speakers:
+    - name: Bill Robertson
+      link: https://twitter.com/billrobertson42
+      talk: TBD
+
+  fotm:
+    - name: Mark Tareshawty
+      link: https://twitter.com/Tarebyte
+      talk: TBD
 
 TBD:
   speakers:
