added Thomas to speak for November 2012

--- a/meetings.yml
+++ b/meetings.yml
@@ -80,6 +80,9 @@
 
 11/07/12:
   speakers:
+    - name: Thomas Winningham
+      link: https://sites.google.com/site/winningham/
+      talk: Parametric Modeling
 
 TBD:
   speakers:
