add John for FOTM November 2012

--- a/meetings.yml
+++ b/meetings.yml
@@ -84,6 +84,10 @@
       link: https://sites.google.com/site/winningham/
       talk: Parametric Modeling
 
+  fotm:
+    - name: John Andrews
+      link: https://twitter.com/xandrews
+
 TBD:
   speakers:
     - name: Bill Robertson
