add John for Dec. 5

--- a/meetings.yml
+++ b/meetings.yml
@@ -94,6 +94,10 @@
       link: https://twitter.com/WilsonEricN
       talk: "Show and Tell: MasterMind"
 
+    - name: John Andrews
+      link: https://twitter.com/xandrews
+      talk: Intro to ClojureScript
+
   fotm:
 
 TBD:
