updates for Feb 2013

--- a/meetings.yml
+++ b/meetings.yml
@@ -1,102 +1,8 @@
-03/07/12:
+02/06/13:
   speakers:
     - name: Bill Robertson
       link: https://twitter.com/billrobertson42
-      talk: Start Learning Clojure Now
-
-    - name: John Andrews
-      link: https://twitter.com/xandrews
-      talk: Advanced Emacs Setup
-
-04/04/12:
-  agenda:
-    - Introduce new website and group
-    - Clojure/conj signup
-
-  speakers:
-    - name: Matthew Boston
-      link: http://www.matthewboston.com
-      talk: Logic Programming with core.logic
-
-    - name: John Andrews
-      link: https://twitter.com/xandrews
-      talk: Datomic
-
-    - name: Marc Peabody
-      link: https://twitter.com/marcpeabody
-      talk: Seesaw with Overtone
-
-  fotm:
-    - name: Raju Gandhi
-      link: http://rajugandhi.com
-      talk: memfn
-
-05/02/12:
-  speakers:
-    - name: Ryan McGowan
-      link: https://twitter.com/Ryan_VM
-      talk: slimv and VimClojure
-
-  fotm:
-    - name: Matthew Boston
-      link: http://www.matthewboston.com
-      talk: interleave
-
-06/06/12:
-  speakers:
-    - name: John Andrews
-      link: https://twitter.com/xandrews
-      talk: Macros
-
-  fotm:
-    - name: Matthew Boston
-      link: http://www.matthewboston.com
-      talk: juxt
-
-07/11/12:
-  speakers:
-    - name: John Andrews
-      link: https://twitter.com/xandrews
-      talk: Swarm Coding
-
-  fotm:
-    - name: Matthew Boston
-      link: http://www.matthewboston.com
-      talk: update-in & get-in
-
-08/01/12:
-  speakers:
-
-  fotm:
-    - name: Mark Tareshawty
-      link: https://twitter.com/Tarebyte
-      talk: group-by
-
-09/05/12:
-  speakers:
-
-10/03/12:
-  speakers:
-
-11/07/12:
-  speakers:
-    - name: Thomas Winningham
-      link: https://sites.google.com/site/winningham/
-      talk: Parametric Modeling
-
-  fotm:
-    - name: John Andrews
-      link: https://twitter.com/xandrews
-
-12/05/12:
-  speakers:
-    - name: Eric Wilson
-      link: https://twitter.com/WilsonEricN
-      talk: "Show and Tell: MasterMind"
-
-    - name: John Andrews
-      link: https://twitter.com/xandrews
-      talk: Intro to ClojureScript
+      talk: Show and Tell
 
   fotm:
 
