add John for Feb. 13 Intro to Datomic

--- a/meetings.yml
+++ b/meetings.yml
@@ -4,6 +4,10 @@
       link: https://twitter.com/billrobertson42
       talk: Show and Tell
 
+    - name: John Andrews
+      link: https://twitter.com/xandrews
+      talk: Intro to Datomic
+
   fotm:
 
 TBD:
