add John to April speakers list

--- a/meetings.yml
+++ b/meetings.yml
@@ -30,6 +30,10 @@
       link: https://twitter.com/Ryan_VM
       talk: "Ragtime + Mongo wrapper"
 
+    - name: John Andrews
+      link: https://twitter.com/xandrews
+      talk: Friend
+
   fotm:
     - name: Matthew Boston
       link: http://www.matthewboston.com
