add Jerry to May meeting

--- a/meetings.yml
+++ b/meetings.yml
@@ -52,6 +52,11 @@
     - name: John Andrews
       link: https://twitter.com/xandrews
       talk: Light Table
+
+    - name: Jerry Mindek
+      link: https://twitter.com/jermindek
+      talk: Sublime
+
 TBD:
   speakers:
     - name: John Andrews
