add Jerry for November meeting presentation

--- a/meetings.yml
+++ b/meetings.yml
@@ -79,6 +79,13 @@
 
 11/06/13:
   speakers:
+    - name: Jerry Mindek
+      link: https://twitter.com/jermindek
+      talk: Show and tell
+  fotm:
+    - name: Jerry Mindek
+      link: https://twitter.com/jermindek
+      talk: zipmap
 
 TBD:
   speakers:
