--- a/data/meetings.yml
+++ b/data/meetings.yml
@@ -4,6 +4,12 @@
       link: https://twitter.com/xandrews
       talk: Datomic
 
+03/05/14:
+  speakers:
+    - name: Felix Flores
+      link: https://twitter.com/felixflores
+      talk: Schema Graphing in Datomic
+
 TBD:
   speakers:
     - name: John Andrews
