add John as speaker for 4/2/14

--- a/data/meetings.yml
+++ b/data/meetings.yml
@@ -10,6 +10,11 @@
       link: https://twitter.com/felixflores
       talk: Schema Graphing in Datomic
 
+04/02/14:
+  speakers:
+    - name: John Andrews
+      link: https://twitter.com/xandrews
+      talk: Big Datomic
 TBD:
   speakers:
     - name: John Andrews
