--- a/data/meetings.yml
+++ b/data/meetings.yml
@@ -36,6 +36,12 @@
       link: https://twitter.com/_Bestra
       talk: React.js
 
+09/28/15:
+  speakers:
+    - name: Felix Flores
+      link: http://felixflor.es/
+      talk: Om Next
+
 TBD:
   speakers:
     - name: John Andrews
